# python-compute-shader

./: .gitignore  CMakeLists.txt  Primes.py
Source/: Module.cpp  Module.def  OpenGL.cpp  OpenGL.hpp
